fix: adjusted logo alignment and design

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #242424;
 }
 
 h1 {
